// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`values() should fail 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [
        Object {
          "errors": Array [],
          "message": "Value should match regexp: /^test/",
          "path": Array [
            "2",
          ],
          "value": 5,
        },
      ],
      "message": "Every value should follow the rule: Value should match regexp: /^test/",
      "path": Array [],
      "value": Array [
        "testA",
        "testB",
        5,
      ],
    },
  ],
  "message": "Values should follow the rule: Every value should follow the rule: Value should match regexp: /^test/",
  "path": Array [],
  "value": Object {
    "a": "testA",
    "b": "testB",
    "c": 5,
  },
}
`;

exports[`values() should support custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [
        Object {
          "errors": Array [],
          "message": "Value should match regexp: /^test/",
          "path": Array [
            "1",
          ],
          "value": 5,
        },
      ],
      "message": "Every value should follow the rule: Value should match regexp: /^test/",
      "path": Array [],
      "value": Array [
        "testA",
        5,
      ],
    },
  ],
  "message": "Custom message",
  "path": Array [],
  "value": Object {
    "a": "testA",
    "b": 5,
  },
}
`;
